# nfsmw-2005-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bepinex-template/: README.md  doorstop_config.ini  manifest.json
cmake/: nfsmw-toolchain-mingw-i686.cmake  nfsmw_sdkConfig.cmake.in  nfsmw_sdkHelpers.cmake
data/: attribute_cracks_verified.json  sdk_addrs.json  sdk_enums.json  struct_offsets.json
docs/: API_REFERENCE.md  BEPINEX_INTEGRATION.md  BUILDING_LINUX.md  BUILDING_MAC.md  BUILDING_WINDOWS.md  CAPABILITIES.md  COOKBOOK.md
examples/: CMakeLists.txt
examples/event_listener_demo/: main.cpp
examples/handling_tweaks/: main.cpp
examples/heli_altitude_hook/: main.cpp
examples/hotkey_toggles/: main.cpp
examples/iat_hook_demo/: main.cpp
examples/infinite_nos/: main.cpp
examples/inline_hook/: main.cpp
examples/lua_native_demo/: main.cpp
examples/midhook_demo/: main.cpp
examples/no_traffic/: main.cpp
examples/overlay_demo/: main.cpp
examples/struct_offsets_demo/: main.cpp
include/nfsmw_sdk/: _generated_addrs.h  _generated_attrs.h  _generated_enums.h  _generated_structs.h  attributes.h  d3d9_hooks.h  enums.h  events.h  functions.h  globals.h  hooks.h  hotkeys.h  iat_hook.h  input.h  lua.h  midhook.h  nfsmw_sdk.h  platform.h  scan.h  structs.h
src/: entry.c
tests/: host_tests.py
tools/: codegen.py
